# FLUXmeme

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  lifecycle.usda  pyproject.toml  sample.sdf  sample.urdf  test_mvcc.flux
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
build_dll/: CTestTestfile.cmake  fluxmeme.sln
build_dll/fluxmeme.dir/MinSizeRel/: objects.txt
build_dll/fluxmeme.dir/RelWithDebInfo/: objects.txt
demo/: demo_a2a.c  demo_compose.c  demo_conv.c  demo_device.c  demo_hardware.py  demo_lifecycle.c  demo_livrps.c  demo_mavlink.c  demo_mcap.c  demo_newton.py  demo_okf.c  demo_robot.c  demo_urdf.c  demo_usd.c  flux_3d.py  flux_viz.py  test_import_export.py
demo/assets/: README.md  cartpole.usda  motor_library.json  quadruped.urdf
docs/: API.md  ARCHITECTURE.md  BENCHMARK.md  CONCEPTS.md  FORMAT.md  GETTING_STARTED.md
docs/rfc/: README.md
include/fluxmeme/: backend.h  codec.h  fluxmeme.h  types.h
python/: README.md  pyproject.toml
python/fluxmeme/: __init__.py  _core.py  ai_review.py  api.py  enrich.py  mjcf_importer.py  robot_exporter.py
python/tests/: test_smoke.py
src/codec/: conv.c
src/compose/: compose.c  compose.h
src/core/: compact.c  crc32c.c  cursor.c  hash.c  internal.h  iter.c  record.c  ref_utils.h  store.c  txn.c  ulid.c
src/facets/: device_comm.c  device_comm.h  robot_graph.c  robot_graph.h
src/port/: port_file.c
src/transcode/: fsutil.h  registry.c
src/transcode/a2a/: a2a_in.c  a2a_out.c
src/transcode/mavlink/: mavlink.c  mavlink.h
src/transcode/mcap/: mcap.c
src/transcode/okf/: okf_in.c  okf_out.c
src/transcode/robotdesc/: robotdesc.c
src/transcode/usd/: stl.c  stl.h  usd.c
tests/: test_compact.c  test_crc32c.c  test_record_codec.c  test_store_mvcc.c
tools/: flux.c
wiki/: API-Reference.md  CLI.md  Composition-LIVRPS.md  FLUXLOOP.md  Format-Specification.md  Getting-Started.md  Governance.md  Home.md  Introduction-to-.flux.md  Introduction-to-DevReady.md  Roadmap.md  Self-Description.md  The-Three-Layers.md  Tutorials.md  _Sidebar.md
